# hass-eedomus

./: .#__init__.py  .#config_flow.py  .#const.py  .#light.py  .flake8  .gitignore  BATTERY_CHILD_ENTITY_IMPLEMENTATION.md  CONVER_POSITION_FIX.md  COVER_ERROR_FIX.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEVICE_TABLE_COMPARISON.md  FINAL_SUMMARY.md  FRONTEND_STRUCTURE.md  INFO.md  LICENSE  MERMAID_CONVERSION_SUMMARY.md  OPTIMIZATIONS_SUMMARY.md  ORGANIZATION_SUMMARY.md  README.md  README_FALLBACK.md  RELEASE_NOTES_v0.13.0.md  RELEASE_NOTES_v0.14.0.md  RELEASE_NOTES_v3.10-instable.md  RELEASE_NOTES_v3.10-unstable_EN.md  SCENE_TO_SELECT_MIGRATION.md  TESTING_GUIDE.md  __init__.py  activate_history_feature.sh  add_ascii_diagrams_fixed.py  analyze_dependencies.py  analyze_errors.py  api_proxy.py  battery.py  binary_sensor.py  check_dependencies.py  climate.py  config_flow.py  const.py  (+37 more)
.github/: MERMAID_GITHUB_GUIDE.md  dependabot.yml  mermaid-config.yml
config/: custom_mapping.yaml  device_mapping.yaml  device_mapping_default.yaml
credentials-ha/: credentials.txt
custom_components/: __init__.py
discussions/: 14.md
docs/: 2026_compatibility.md  ASYNC_FIX_README.md  BATTERY_SENSOR_EXAMPLE.md  CLEANUP_FEATURE.md  COLOR_MODE_FIX_README.md  COLOR_MODE_FIX_SUMMARY.md  COMPREHENSIVE_FIXES_SUMMARY.md  COVER_FIX_FINAL.md  COVER_POSITION_FIX_COMPLETE.md  DEPLOYMENT_GUIDE_HISTORY.md  DEVICE_MAPPING_TABLE.md  DEVICE_NAMES_REPORT.md  DEVICE_REGISTRY_WARNING_ANALYSIS.md  DYNAMIC_PERIPHERALS_FIX.md  ENABLE_HISTORY_FEATURE.md  FIXES_SUMMARY.md  (+47 more)
(+149 files in other folders)
